# python-yt-music-dl

./: .gitignore  README.md  error.txt  pyproject.toml  tasks.py
src/: colors.py  config.py  custom_io.py  database_connection.py  index.py  initialize_database.py  initialize_file_structure.py
src/entities/: __init__.py  playlist.py  song.py
src/phases/: __init__.py  check_playlists.py  check_similar_artists.py  download_songs.py  export_data.py  import_data.py  remove_orphans.py  rename_songs.py  update_cover_images.py
src/repositories/: __init__.py  file_repository.py  playlist_repository.py  song_repository.py
src/services/: __init__.py  playlist_service.py  song_renamer_service.py  song_service.py  youtube_api_service.py
