[tool.poetry]
name = "yt-music-dl"
version = "0.1.0"
description = "Downloads songs from youtube, renames them and writes the song metadata"
license = "GPL-3.0-only"
authors = ["Juho Röyskö <roysko.juho@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.1.3"
pydub = "^0.25.1"
yt-dlp = "*"
pathvalidate = "^3.0.0"
requests = "^2.28.1"
Pillow = "^10.0.1"

[tool.poetry.dev-dependencies]
pylint = "^3.0.1"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
